--- a/style.css
+++ b/style.css
@@ -4,20 +4,20 @@ html, body {
   margin: 0;
   padding: 0;
 }
-
 #home{
   display: flex;
   flex-wrap: nowrap;
-  height: 50vh;
+  min-height: 60vh;
 }
+
 .precisaser{
   display: flex;
   justify-content: center;
   width: 50%;
-  height: 100%;
+  min-height: 100%;
 }
 .logo-ps{
-  width: 29%;
+  width: 40%;
 }
 
 .vainaweb{
@@ -33,12 +33,13 @@ html, body {
 .historia{
   font-family: 'Roboto-Medium', sans-serif;
   font-size: 0.9em;
+  width: 85%;
 }
 
 #azul{
   display: flex;
   flex-wrap: nowrap;
-  height: 130vh;
+  min-height: 100vh;
   background-color: #64C0D9;
 }
 #azul div{
@@ -47,7 +48,8 @@ html, body {
 .eventos{
   width: 43%;
   height: 100%;
-  margin-left: 7%;
+  margin-left: 5%;
+  margin-right: 2%;
 }
 .vnb{
   width: 43%;
@@ -56,26 +58,28 @@ html, body {
 }
 #azul h2{
   font-family: 'Roboto-Bold', sans-serif;
-  font-size: 1.75em;
+  font-size: 1.5em;
   color: #fff;
   width: 50%;
   margin-right: 0;
 }
 #azul p{
   font-family: 'Roboto-Bold', sans-serif;
-  width: 85%;
-  font-size: 1em;
+  width: 90%;
+  font-size: 0.95em;
   color: #fff;
   margin: 0;
   margin-bottom: 1em;
 }
+
+
+
 
 #parceiros{
   display: flex;
   flex-wrap: wrap;
   width: 100%;
   height: 200vh;
-  margin-top: 7%;
 }
 
 
@@ -87,17 +91,17 @@ html, body {
 
 }*/
 #parceiros div{
-  width: 28%;
-  height: 15%;
+  width: 21%;
+  height: auto;
   margin: 0;
-  margin-left: 4%;
-  margin-bottom: 10%;
+  margin-left: 3%;
+  margin-bottom: 5%;
 }
 .logo{
-  width: 50%;
-  height: 55%;
+  width: 80%;
+  height: 42%;
   margin: 0;
-  margin-left: 20%;
+/*  margin-left: 20%;*/
 }
 #parceiros div h3 {
   margin: 0;
@@ -116,6 +120,12 @@ html, body {
   font-size: 0.9em;
   color: #333;
 }
+
+
+
+
+
+
 
 #map{
     width: 100%;
@@ -140,10 +150,12 @@ footer{
   padding-right: 2%; 
 }
 .precisa{
-  width: 43%;
+  width: 38%;
   font-family: 'Roboto-Light', sans-serif;
   font-weight: 400;
   font-size: 0.9em;
   color: #333;
   margin: 0, 25px;
 }
+
+
