--- a/style.css
+++ b/style.css
@@ -78,43 +78,46 @@ html, body {
 #parceiros{
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
-  height: 200vh;
-}
-
-
-/*.projetos{
-  display: flex;
   justify-content: center;
-  font-size: 2em;
-  font-family: 'Roboto-Bold', sans-serif;
+  align-content: center;
+  width: 100%;
+  min-height: 120vh;
+}
 
-}*/
-#parceiros div{
-  width: 21%;
-  height: auto;
-  margin: 0;
-  margin-left: 3%;
-  margin-bottom: 5%;
+
+.title-projetos{
+  width: 100%;
+  text-align: center;
+  font-size: 1.5em;
+  font-family: 'Roboto-Medium', sans-serif;
+  color: #555;
+  margin-top: 5%;
 }
-.logo{
-  width: 80%;
+
+.item-parceiros{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: baseline;
+  width: 22%;
   height: 42%;
-  margin: 0;
-/*  margin-left: 20%;*/
+  margin-top: 5%;
+  margin-left: 2%;
 }
-#parceiros div h3 {
-  margin: 0;
+.item-parceiros img{
+  max-width: 100%;
+  max-height: 19vh;
+}
+
+.item-parceiros h3{
   width: 100%;
   font-family: 'Roboto-Bold', sans-serif;
   font-size: 1em;
   color: #333;
-  margin: 3%;
-  margin-left: 0;
 }
 
-#parceiros div p{
-  margin: 0;
+.item-parceiros p{
   width: 100%;
   font-family: 'Roboto-Light', sans-serif;
   font-size: 0.9em;
@@ -131,7 +134,7 @@ html, body {
     width: 100%;
     height: 80vh;
 }
-#map img {
+.maps {
   width: 100%;
   height: 100%;
 }
