--- a/style.css
+++ b/style.css
@@ -141,34 +141,43 @@ html, body {
 }
 
 footer{
+    display: flex;
+    align-self: baseline; 
+    /*justify-content: space-around;*/
     margin-top: 3%;
     padding-left: 7%;
 }
+.plugin-responsivo{
+  display: none;
+}
+.plugin-facebook{
+  display: block;
+}
+.p-precisaser{
+  width: 35%;
+  margin-right: 10%;
+}
 .logo-precisaser{
-  width: 15%;
-  height: 25%;
+  width: 58%;
+  height: 18%;
 }
 .box{
-  width: 4%;
-  height: 4%;
-  padding-right: 2%; 
+  width: 20%;
+  height: 20%;
 }
 .precisa{
-  width: 38%;
+  width: 100%;
   font-family: 'Roboto-Light', sans-serif;
   font-weight: 400;
-  font-size: 0.9em;
+  font-size: 0.8em;
   color: #333;
-  margin: 0, 25px;
-  padding-bottom: 2%;
+  padding-left: 4%;
+  margin-top: 7%;
+  line-height: 20px;
 }
 
 
  @media (max-width: 640px){
-        html, body{
-          width: 100%;
-          overflow: scroll;
-        }
         #home{
           flex-direction: column;
           justify-content: center;
@@ -206,38 +215,56 @@ footer{
         }
         .eventos{
           width: 95%;
+          margin-right: 0;
         }
         .vnb{
           width: 95%;
-          margin-left: 2%;
+          margin-left: 4%;
         }
         
         #parceiros{
           display: none;
+        }
+        #map{
+          margin: 0;
         }
         footer{
           display: flex;
           align-items: center;
           justify-content: center;
           flex-direction: column;
-          padding-left: 0;
-
-      }
+          padding: 0;
+          margin-top: 7%;
+        }
+        .p-precisaser{
+          width: 100%;
+          padding-right: 0;
+          margin-right: 0;
+        }
 
         .logo-precisaser{
-          width: 45%;
-          height: 20%;
-          margin-top: 5%;
+          width: 40%;
+          height: 25%;
         }
         .box{
-          width: 7%;
-          padding-right: 0;
+          width: 10%;
+          height: 10%;
+          padding-left: 20%;
+
+          padding-right: 3%;
         }
         .precisa{
-          width: 85%;
+          width: 93%;
           font-size: 16px;
           margin-top: 5%;
-          padding-bottom: 0;
+          padding-left: 4%;
+          margin-bottom: 7%;
+        }
+        .plugin-facebook{
+          display: none;
+        }
+        .plugin-responsivo{
+          display: block;
         }
 
     }
