--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ html, body {
     align-items: center;
     background-image: url(assets/map.png);
     background-repeat: no-repeat;
-    height: 90vh;
+    min-height: 100%;
 
 }
 .plugin-responsivo{
@@ -140,14 +140,17 @@ html, body {
 }
 .plugin-facebook{
   display: block;
+  margin-top: 1%;
 }
 .p-precisaser{
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 65%;
-  height: 42%;
+  height: 45%;
   background-color: #fff;
+  margin-top: 10%;
+  margin-bottom: 10%;
 }
 .contact-precisaser{
   width: 50%;
@@ -157,6 +160,7 @@ html, body {
   font-size: 1.5em;
   font-weight: 500;
   color: #333;
+  padding-left: 3%;
 }
 .contact-precisaser ul li{
   font-family: 'Roboto-Light', sans-serif;
@@ -171,7 +175,7 @@ html, body {
           flex-direction: column;
           justify-content: center;
           align-items: center;
-          min-height: 90vh;
+          min-height: 85vh;
         }
         .div-precisaser{
           width: 100%;
@@ -180,6 +184,7 @@ html, body {
           width: 50%;
         }
         .vainaweb{
+
           width: 100%;
         }
         .tittle-instituto{
@@ -235,8 +240,8 @@ html, body {
 
 
         #map{
-          min-height: 50vh;
-          background-size: 180vh;
+          min-height: 100%;
+          background-size: 100%;
         }
         
         .p-precisaser{
@@ -244,12 +249,11 @@ html, body {
         }
         .plugin-responsivo{
           display: block;
-          align-items: center;
-          justify-content: center;
         }
 
         .precisa{
           padding-bottom: 5%;
+          margin-top: 10%;
         }
         .logo-precisaser{
           width: 75%;
@@ -260,6 +264,31 @@ html, body {
           height: 18%;
           padding-right: 3%;
         }
+        .contact-responsivo{
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+        }
+        .tittle-contact{
+          margin: 0;
+          padding-left: 0;
+        }
+        .contact-responsivo ul{
+          padding: 0;
+          margin-top: 5%;
+          margin-bottom: 8%;
+
+        }
+        .contact-responsivo ul li{
+          font-family: 'Roboto-Light', sans-serif;
+          font-size: 1em;
+          color: #333;
+          line-height: 29px;
+          list-style-type: none;
+        }
+
 
     }
 
@@ -276,7 +305,7 @@ html, body {
           line-height: 22px;
         }
         #azul{
-          min-height: 130vh;
+          min-height: 100%;
         }
         .eventos{
           margin-right: 0;
@@ -294,6 +323,9 @@ html, body {
         .item-parceiros p{
           width: 95%;
           line-height: 24px;
+        }
+        #map{
+          background-size: 200%;
         }
         .plugin-responsivo{
           width: 90%;
