--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 #home{
   display: flex;
   flex-wrap: nowrap;
-  min-height: 60vh;
+  min-height: 80vh;
 }
 
 .div-precisaser{
@@ -175,7 +175,7 @@ html, body {
           flex-direction: column;
           justify-content: center;
           align-items: center;
-          min-height: 85vh;
+          min-height: 120vh;
         }
         .div-precisaser{
           width: 100%;
@@ -214,11 +214,12 @@ html, body {
         }
         .eventos{
           width: 95%;
+          margin-left: 0;
 
         }
         .vnb{
           width: 95%;
-          margin-left: 4%;
+          /*margin-left: 4%;*/
         }
 
 
@@ -234,7 +235,7 @@ html, body {
 
         .item-parceiros p{
           width: 93%;
-          margin-left: 2%;
+          /*margin-left: 2%;*/
         }
 
 
@@ -248,12 +249,14 @@ html, body {
           display: none;
         }
         .plugin-responsivo{
-          display: block;
+          /*display: block;*/
+                    display: flex;
+          flex-direction: column;
+          justify-content: center;
         }
 
         .precisa{
-          padding-bottom: 5%;
-          margin-top: 10%;
+          margin-top: 7%;
         }
         .logo-precisaser{
           width: 75%;
@@ -265,11 +268,13 @@ html, body {
           padding-right: 3%;
         }
         .contact-responsivo{
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
           text-align: center;
+          align-self:  center;
+          width: 70%;
+          background-color: #fff;
+          padding-top: 3%;
+          margin-top: 4%;
+          margin-bottom: 5%;
         }
         .tittle-contact{
           margin: 0;
@@ -277,9 +282,8 @@ html, body {
         }
         .contact-responsivo ul{
           padding: 0;
-          margin-top: 5%;
-          margin-bottom: 8%;
-
+          margin-top: 3%;
+          margin-bottom: 5%;
         }
         .contact-responsivo ul li{
           font-family: 'Roboto-Light', sans-serif;
